# fw-nrfconnect-nrf

./: CODEOWNERS  west.yml
applications/edge_impulse/: CMakeLists.txt  Kconfig  sample.yaml
applications/nrf_desktop/: CMakeLists.txt  Kconfig  Kconfig.defaults  Kconfig.sysbuild  README.rst  board_configuration.rst  sample.yaml
cmake/sysbuild/: b0_mcuboot_signing.cmake  image_signing.cmake  zip.cmake
doc/nrf/: links.txt  scripts.rst  ug_bt_fast_pair.rst  ug_thingy53.rst
include/: ei_ncs.h  profiler.h  wave_gen.h
include/bluetooth/: adv.h  adv_prov.h
include/caf/: ble_smp.rst  caf_overview.rst  sensor_sampler.h
include/drivers/: sensor_sim.h
lib/edge_impulse/: CMakeLists.ei.template  CMakeLists.txt  Kconfig  ei_ncs.cmake  ei_ncs.cpp
lib/wave_gen/: wave_gen.c
modules/: Kconfig.mcuboot
modules/coremark/: CMakeLists.txt  Kconfig  core_portme.c  core_portme.h  coremark_zephyr.h
modules/mcuboot/: CMakeLists.txt
samples/edge_impulse/: prj.conf
scripts/: quarantine.yaml  quarantine_integration.yaml  requirements-fixed.txt
scripts/event_manager/: EventManagerInfo.py  EventManagerRst.py  event_manager_cli.py
scripts/hid_configurator/: NrfHidDevice.py  README.rst  configurator_cli.py  configurator_core.py  requirements.txt
scripts/profiler/: data_collector.py  events.py  model_creator.py  plot_nordic.py  real_time_plot.py  rtt2socket.py  rtt2stream.py  rtt_nordic_profiler_host.py  stream.py
subsys/bluetooth/: CMakeLists.txt  Kconfig
subsys/bluetooth/services/fast_pair/fp_storage/: CMakeLists.txt  Kconfig.fp_storage  fp_storage.c
sysbuild/: CMakeLists.txt  Kconfig.matter
tests/lib/edge_impulse/: .gitignore  CMakeLists.txt  README  prj.conf  testcase.yaml
tests/lib/edge_impulse/edge_impulse_zip/edge-impulse-sdk/: ei_run_classifier.h  ei_run_classifier_mock.cpp
tests/lib/edge_impulse/src/: main.cpp
tests/lib/edge_impulse/src/edge_impulse_zip/: ei_test_params.h
tests/lib/edge_impulse/src/edge_impulse_zip/edge-impulse-sdk/: ei_run_classifier_mock.cpp
(+465 files in other folders)
